--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         window.bpspat.api.setNotes("Test notes");
     }
 	var setDisposition = function() {
-        window.bpspat.api.setDisposition("1001");
+        window.bpspat.api.setDisposition("Booked - Assement");
     }
 	var completeInteraction = function() {
         window.bpspat.api.completeInteraction();
