--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         window.bpspat.api.completeInteraction();
     }
 	var completeInteractionWithDisp = function() {
-        window.bpspat.api.completeInteractionWithDisp("1001","Test notes");
+        window.bpspat.api.completeInteractionWithDisp("1001","Note");
     }
 
 	// call recordings
