--- a/Klook.html
+++ b/Klook.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://support5x.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://delta.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: 'd64f7b366d964cb79cb22ca120d0710a',
-        apiUrl: 'https://support5x.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'support5x.brightpattern.com',
-        chatPath: 'https://support5x.brightpattern.com/clientweb/chat-client-v4/'
+        appId: '9c3aff55ab444f578b3d94c28a8aa7d8',
+        apiUrl: 'https://delta.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'delta.brightpattern.com',
+        chatPath: 'https://delta.brightpattern.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -18,4 +18,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://support5x.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://delta.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
