--- a/WSOLMUTE.html
+++ b/WSOLMUTE.html
@@ -88,8 +88,8 @@
 	</script>
 
 
-<div><button id="muteCallRecording" onclick="muteCallRecording()">muteCallRecording</button>	</div>
-<div><button id="unmuteCallRecording" onclick="unmuteCallRecording()">unmuteCallRecording</button></div>
+<div><button id="muteCallRecording" onclick="muteCallRecording()">STOP RECORDING</button>	</div>
+<div><button id="unmuteCallRecording" onclick="unmuteCallRecording()">START RECORDING</button></div>
 
 
 
