--- a/snippet-page.html
+++ b/snippet-page.html
@@ -1,42 +1,21 @@
-<!DOCTYPE html>
-
-<!-- ___PRODUCT_BUILD___ (___PRODUCT_COMMENTS___) ___PRODUCT_DATE___ -->
-
-<html>
-<head>
-    <title>Chat Test Page</title>
-</head>
-<body>
-
-<!-- You have to put this piece of JavaScript code into your web page -->
-
+<!-- You have to put this piece of JavaScript code into your web page
+Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
+-->
+<link type="text/css" rel="stylesheet" href="https://ymca.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
-        appId: '123',                   /* Unique identifier of Mobile/Web record of Portal Tenant Management   */
-        clientId: 'WebChat',            /* no need to change this */
-        apiUrl: '/clientweb/api/v1',    /* path to public API can be absolute like http://example.brightpattern.com:98/clientweb/api/v1 or relative*/
-        tenantUrl: 'example.com',
-        width: 300,                     /* chat width */
-        chatPath: '',                    /* relative path to client-chat-page.html i.e empty here because snippet-page.html and client-chat-page.html in same directory */
-        
-        /* Default customer data, it can be collected on current site's context*/
-        /* Customer data also can be requested via "Request Input" block + "MobileChatCustomerData" formName */
-/*
-        togetherJS_enabled : true,
-        first_name: '',
-        last_name: '',
-        from: '',
-        email: '',
-        account_number: '',
-        phone_number: 91001,
-        location : {
-            latitude: 37.5151481,
-            longitude: -122.4183997
-        }
-*/
+        appId: '67f3749737674ac6a6b30b13de400677',
+        apiUrl: 'https://ymca.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'ymca.brightpattern.com',
+        chatPath: 'https://ymca.brightpattern.com/clientweb/chat-client-v4/'
 
+        /*        
+         // Default customer data, it can be collected on current site's context
+         first_name: '',
+         last_name: '',
+         email: '',
+         phone_number: ''
+ 		*/
     };
 </script>
-<script type="text/javascript" src="js/snippet.js"></script>
-</body>
-</html>
+<script src="https://ymca.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
