--- a/snippet-page.html
+++ b/snippet-page.html
@@ -1,13 +1,13 @@
 <!-- You have to put this piece of JavaScript code into your web page
 Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
 -->
-<link type="text/css" rel="stylesheet" href="https://ymca.brightpattern.com/clientweb/chat-client-v4/css/form.css">
+<link type="text/css" rel="stylesheet" href="https://ymcanorth.brightpattern.com/clientweb/chat-client-v4/css/form.css">
 <script type="text/javascript">
     SERVICE_PATTERN_CHAT_CONFIG = {
         appId: '67f3749737674ac6a6b30b13de400677',
-        apiUrl: 'https://ymca.brightpattern.com/clientweb/api/v1',
-        tenantUrl: 'ymca.brightpattern.com',
-        chatPath: 'https://ymca.brightpattern.com/clientweb/chat-client-v4/'
+        apiUrl: 'https://ymcanorth.brightpattern.com/clientweb/api/v1',
+        tenantUrl: 'ymcanorth.brightpattern.com',
+        chatPath: 'https://ymcanorth.brightpattern.com/clientweb/chat-client-v4/'
 
         /*        
          // Default customer data, it can be collected on current site's context
@@ -18,4 +18,4 @@ Note: Use <!DOCTYPE html> on the page where snippet located for better rendering
  		*/
     };
 </script>
-<script src="https://ymca.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
+<script src="https://ymcanorth.brightpattern.com/clientweb/chat-client-v4/js/init.js"></script> 
